<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:android="http://schemas.android.com/apk/res/android">

    <item
        android:id="@+id/menu_feed"
        android:title="@string/menu_feed"
        app:showAsAction="always" />
    <item
        android:id="@+id/menu_grow"
        android:title="@string/menu_grow"
        app:showAsAction="never" />
    <item
        android:id="@+id/menu_sleep"
        android:title="@string/menu_sleep"
        app:showAsAction="always" />
    <item
        android:id="@+id/menu_supply"
        android:title="@string/menu_supply"
        app:showAsAction="never" />
    <item
        android:id="@+id/menu_persaonal"
        android:title="@string/menu_personal"
        app:showAsAction="never" />
</menu>