<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.example.student.babydiary.FeedActivity">

    <EditText
        android:id="@+id/inputMK"
        android:layout_width="160dp"
        android:layout_height="0dp"
        android:layout_marginStart="8sp"
        android:ems="10"
        android:inputType="number"
        android:text="0"
        app:layout_constraintStart_toEndOf="@+id/feed_mothermilk"
        app:layout_constraintTop_toTopOf="@+id/feed_mothermilk" />

    <TextView
        android:id="@+id/textView_supporttitle"
        android:layout_width="54dp"
        android:layout_height="30dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:text="cc"
        android:textSize="18sp"
        app:layout_constraintStart_toEndOf="@+id/inputMK"
        app:layout_constraintTop_toTopOf="@+id/inputMK" />

    <TextView
        android:id="@+id/feed_header"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:text="飲食紀錄"
        android:textAlignment="center"
        android:textAppearance="@style/TextAppearance.AppCompat.Large"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/savefilebt"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="4sp"
        android:layout_marginTop="24dp"
        android:onClick="clickadd"
        android:text="儲存"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView10" />

    <TextView
        android:id="@+id/feed_showtime"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:text="TextView"
        android:textAppearance="@style/TextAppearance.AppCompat.Large"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/feed_header" />

    <TextView
        android:id="@+id/feed_formula"
        android:layout_width="130dp"
        android:layout_height="0dp"
        android:layout_marginStart="16sp"
        android:layout_marginTop="24dp"
        android:text="@string/feed_Formulamilk"
        android:textAlignment="viewStart"
        android:textAppearance="@style/TextAppearance.AppCompat.Large"
        android:textSize="30sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/feed_mothermilk" />

    <EditText
        android:id="@+id/inputformula"
        android:layout_width="160dp"
        android:layout_height="0dp"
        android:layout_marginStart="12sp"
        android:layout_marginTop="8dp"
        android:ems="10"
        android:inputType="number"
        android:text="0"
        app:layout_constraintStart_toEndOf="@+id/feed_formula"
        app:layout_constraintTop_toTopOf="@+id/feed_formula" />

    <TextView
        android:id="@+id/textView_historytitle"
        android:layout_width="54dp"
        android:layout_height="30dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:text="cc"
        android:textSize="18sp"
        app:layout_constraintStart_toEndOf="@+id/inputformula"
        app:layout_constraintTop_toTopOf="@+id/inputformula" />

    <TextView
        android:id="@+id/feed_Weaning"
        android:layout_width="130dp"
        android:layout_height="0dp"
        android:layout_marginStart="16sp"
        android:layout_marginTop="24dp"
        android:text="@string/feed_Weaning"
        android:textAppearance="@style/TextAppearance.AppCompat.Large"
        android:textSize="30sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/feed_formula" />

    <EditText
        android:id="@+id/inputWeaning"
        android:layout_width="160dp"
        android:layout_height="0dp"
        android:layout_marginStart="8sp"
        android:layout_marginTop="8dp"
        android:ems="10"
        android:inputType="number"
        android:text="0"
        app:layout_constraintStart_toEndOf="@+id/feed_Weaning"
        app:layout_constraintTop_toTopOf="@+id/feed_Weaning" />

    <TextView
        android:id="@+id/textView10"
        android:layout_width="54dp"
        android:layout_height="30dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:text="cc"
        android:textSize="18sp"
        app:layout_constraintStart_toEndOf="@+id/inputWeaning"
        app:layout_constraintTop_toTopOf="@+id/inputWeaning" />

    <TextView
        android:id="@+id/feed_mothermilk"
        android:layout_width="130dp"
        android:layout_height="0dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="24dp"
        android:text="@string/feed_mothermilk"
        android:textAppearance="@style/TextAppearance.AppCompat.Large"
        android:textSize="30sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/feed_showtime" />

    <Button
        android:id="@+id/alarm_clockbt"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16sp"
        android:layout_marginTop="24dp"
        android:onClick="clickalarm"
        android:text="設定鬧鐘"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/feed_Weaning" />


</android.support.constraint.ConstraintLayout>
