<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.example.student.babydiary.growActivity">

    <TextView
        android:id="@+id/grow_header"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:text="成長記錄"
        android:textAlignment="center"
        android:textAppearance="@style/TextAppearance.AppCompat.Large"
        android:textSize="24sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/grow_showtime"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:text="TextView"
        android:textAppearance="@style/TextAppearance.AppCompat.Large"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/grow_header" />

    <TextView
        android:id="@+id/grow_tall"
        android:layout_width="130dp"
        android:layout_height="43dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="16dp"
        android:text="@string/grow_tall"
        android:textAppearance="@style/TextAppearance.AppCompat.Large"
        android:textSize="30sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/grow_showtime" />

    <EditText
        android:id="@+id/inputtall"
        android:layout_width="160dp"
        android:layout_height="42dp"
        android:layout_marginStart="8dp"
        android:ems="10"
        android:inputType="textPersonName"
        android:text="0"
        app:layout_constraintStart_toEndOf="@+id/grow_tall"
        app:layout_constraintTop_toTopOf="@+id/grow_tall" />

    <TextView
        android:id="@+id/grow_cmunit"
        android:layout_width="54dp"
        android:layout_height="30dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:text="cm"
        app:layout_constraintStart_toEndOf="@+id/inputtall"
        app:layout_constraintTop_toTopOf="@+id/inputtall" />

    <TextView
        android:id="@+id/grow_weight"
        android:layout_width="130dp"
        android:layout_height="43dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:text="@string/grow_weight"
        android:textAppearance="@style/TextAppearance.AppCompat.Large"
        android:textSize="30sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/grow_tall" />

    <EditText
        android:id="@+id/inputweight"
        android:layout_width="160dp"
        android:layout_height="42dp"
        android:layout_marginStart="8dp"
        android:ems="10"
        android:inputType="textPersonName"
        android:text="0"
        app:layout_constraintStart_toEndOf="@+id/grow_weight"
        app:layout_constraintTop_toTopOf="@+id/grow_weight" />

    <TextView
        android:id="@+id/grow_kgunit"
        android:layout_width="54dp"
        android:layout_height="30dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:text="kg"
        app:layout_constraintStart_toEndOf="@+id/inputweight"
        app:layout_constraintTop_toTopOf="@+id/inputweight" />

    <TextView
        android:id="@+id/grow_headlenth"
        android:layout_width="130dp"
        android:layout_height="43dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:text="@string/grow_head"
        android:textAppearance="@style/TextAppearance.AppCompat.Large"
        android:textSize="30sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/grow_weight" />

    <EditText
        android:id="@+id/inputhead"
        android:layout_width="160dp"
        android:layout_height="43dp"
        android:ems="10"
        android:inputType="textPersonName"
        android:text="0"
        app:layout_constraintStart_toEndOf="@+id/grow_headlenth"
        app:layout_constraintTop_toTopOf="@+id/grow_headlenth" />

    <TextView
        android:id="@+id/textView12"
        android:layout_width="54dp"
        android:layout_height="30dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="12dp"
        android:text="cm"
        app:layout_constraintStart_toEndOf="@+id/inputhead"
        app:layout_constraintTop_toTopOf="@+id/inputhead" />

    <Button
        android:id="@+id/grow_savefilebt"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="16dp"
        android:layout_marginTop="12dp"
        android:onClick="clickadd"
        android:text="儲存"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/inputhead" />

    <Button
        android:id="@+id/grow"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="12dp"
        android:text="重填"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/inputhead" />

    <ImageView
        android:id="@+id/grow_img"
        android:layout_width="245dp"
        android:layout_height="191dp"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="68dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/inputhead"
        app:srcCompat="@mipmap/ic_launcher" />

</android.support.constraint.ConstraintLayout>
